<resources>
    <string name="app_name">BCA Revamp</string>
    <!-- Strings related to login -->

    <!-- Strings for Activity Login Second -->
    <string name="hi">HI, </string>
    <string name="name">ANDHIKA PUTRA</string>
    <string name="id">1*******b</string>
    <string name="password_hint">Masukkan password anda</string>
    <string name="forget_password">Forget Password</string>
    <string name="login">Login</string>
    <string name="change_account">Masuk menggunakan akun lain</string>
    <string name="about_bca">Tentang BCA</string>
    <string name="credit_card_application">Pengajuan Kartu Kredit</string>
    <string name="call_bca">Halo BCA 1500888</string>
    <string name="whatsapp_bca">Whatsapp BCA</string>

    <!-- Strings for Activity Login First -->
    <string name="login_title">Log In</string>
    <string name="user_id">User Id</string>
    <string name="user_id_hint">Masukkan user id anda</string>
    <string name="password">Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="error_password">Password yang dimasukkan salah</string>
    <string name="error_user_id">User ID yang dimasukkan salah</string>


    <!--    Navbar-->
    <string name="title_home">Beranda</string>
    <string name="title_mutasi">Mutasi</string>
    <string name="title_notifikasi">Notifikasi</string>
    <string name="title_profil">Profil</string>

    <string name="hello_blank_fragment">Halo</string>

    <!-- Strings for Toast info -->
    <string name="toast_info">Mohon maaf, layanan belum tersedia.</string>


    <!--  contentDescription -->
    <string name="des_logo_setara">Logo Aplikasi Setara</string>
    <string name="des_btn_pengajuan">Tombol Pengajuan Kartu Kredit</string>
    <string name="des_btn_halobca">Tombol Halo BCA</string>
    <string name="des_btn_wabca">Tombol Whatsapp BCA</string>
    <string name="des_toast_icon">Icon Info</string>
    <string name="des_toast_info">Mohon maaf, layanan belum tersedia</string>
    <string name="title_error_404">Opps! Halaman Tidak Ditemukan</string>
    <string name="desc_error404">Sepertinya halaman yang Anda cari tidak ada atau telah dipindahkan. Silahkan kembali ke Beranda atau coba gunakan fitur pencarian.</string>
    <string name="kembali_ke_beranda">Kembali ke Beranda</string>
    <string name="title_error500">Maaf, Terjadi Kesalahan Pada Server Kami :(</string>
    <string name="desc_error500">Kami sedang berusaha memperbaikinya secepat mungkin. Silahkan kembali ke Beranda atau coba lagi nanti.</string>

</resources>