<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/navicon_home_off"
        android:title="@string/title_home"/>
    <item
        android:id="@+id/mutasiFragment"
        android:enabled="true"
        android:icon="@drawable/navicon_reciept_off"
        android:title="@string/title_mutasi"/>
    <item
        android:id="@+id/navigation_fab_placeholder"
        android:enabled="false"
        android:icon="@android:color/transparent"
        android:title="" />
    <item
        android:id="@+id/notifikasiFragment"
        android:enabled="true"
        android:icon="@drawable/navicon_bell_off"
        android:title="@string/title_notifikasi"/>
    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/navicon_user_off"
        android:title="@string/title_profil"/>
</menu>