<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBFDFF"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <com.google.android.material.imageview.ShapeableImageView
            android:contentDescription="@string/des_logo_setara"
            android:id="@+id/logo"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/logo_setara_a"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </com.google.android.material.imageview.ShapeableImageView>

        <TextView
            android:id="@+id/textName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/nunitoextrabold"
            android:text="@string/login_title"
            android:textColor="@color/Primary100"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo" />

        <TextView
            android:id="@+id/text_user_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunitoregular"
            android:text="@string/user_id"
            android:textColor="#878787"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textName">
        </TextView>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="none"
            app:hintEnabled="false"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_user_id">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputIdField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_id_hint"
                android:textColor="@color/Primary100"
                android:inputType="text"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:paddingBottom="5dp"
                android:textColorHint="#C4C4C4"/>
            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/garis1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:dividerColor="@color/Primary100" />
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
        />

        <TextView
            android:id="@+id/errorIdInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_user_id"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="gone"
            android:paddingTop="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputId"
            />
        <TextView
            android:id="@+id/text_user_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunitoregular"
            android:text="@string/password"
            android:textColor="#878787"
            app:endIconTint="#115DA9"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/errorIdInput">
        </TextView>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/Primary100"
            app:boxBackgroundMode="none"
            app:hintEnabled="false"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_user_pw">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPasswordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:textColor="@color/Primary100"
                android:textColorHint="#C4C4C4"
                android:inputType="textPassword"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:paddingBottom="5dp" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/garis2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:dividerColor="@color/Primary100" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_error_pw"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputPassword">

            <TextView
                android:id="@+id/errorPwInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/error_password"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone"
                android:paddingTop="6dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/textForget"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/textForget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/nunitoregular"
                android:text="@string/reset_password"
                android:textColor="@color/Primary100"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textColorLink="@color/Primary100"
            android:textSize="14sp"
            app:backgroundTint="@color/Primary100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_error_pw" />

        <TextView
            android:id="@+id/textGanti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/nunitoregular"
            android:text="@string/change_account"
            android:textColor="@color/Primary100"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonLogin" />

        <Button
            android:id="@+id/buttonTentangBca"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="50dp"
            android:text="@string/about_bca"
            android:textColor="@color/white"
            android:textSize="9sp"
            app:backgroundTint="@color/bgBluSk"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textGanti" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/menuLain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/main2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/menu_pengajuan"
            android:layout_width="98dp"
            android:layout_height="45dp"
            android:background="@color/white">

            <ImageView
                android:contentDescription="@string/des_btn_pengajuan"
                android:layout_width="28dp"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/icon_atm"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="55dp"
                android:layout_height="30dp"
                android:layout_marginEnd="5dp"
                android:text="@string/credit_card_application"
                android:textSize="10sp"
                android:textColor="@color/Primary100"
                android:fontFamily="@font/nunitoregular"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/menu_pengajuan2"
            android:layout_width="98dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:background="@color/white">

            <ImageView
                android:contentDescription="@string/des_btn_halobca"
                android:layout_width="28dp"
                android:layout_height="25dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/icon_call"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="55dp"
                android:layout_height="30dp"
                android:layout_marginEnd="5dp"
                android:text="@string/call_bca"
                android:textSize="10sp"
                android:fontFamily="@font/nunitoregular"
                android:textColor="@color/Primary100"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/menu_pengajuan3"
            android:layout_width="98dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:background="@color/white">

            <ImageView
                android:contentDescription="@string/des_btn_wabca"
                android:layout_width="28dp"
                android:layout_height="25dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/icon_wa"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="55dp"
                android:layout_height="30dp"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/nunitoregular"
                android:text="@string/whatsapp_bca"
                android:textColor="@color/Primary100"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>