<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBFDFF"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <View
        android:id="@+id/bacgroundView"
        android:layout_width="match_parent"
        android:layout_height="113dp"
        android:background="#115DA9"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:contentDescription="@string/des_logo_setara"
        android:id="@+id/logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:src="@drawable/logo_setara_b"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.material.imageview.ShapeableImageView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/nunitoextrabold"
        android:text="@string/login_title"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bacgroundView">

        <TextView
            android:id="@+id/textHi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunitobold"
            android:text="@string/hi"
            android:textColor="#115DA9"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/nunitoextrabold"
            android:text="@string/name"
            android:textColor="#115DA9"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textHi" />

        <TextView
            android:id="@+id/textId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/nunitobold"
            android:text="@string/id"
            android:textColor="#115DA9"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textName" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            app:boxBackgroundMode="none"
            app:endIconMode="password_toggle"
            app:endIconTint="#115DA9"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textId">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPasswordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:fontFamily="@font/nunitoregular"
                android:textColorHint="#C4C4C4"
                android:inputType="textPassword"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:paddingBottom="5dp"
                android:textColor="#115DA9" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/garis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:dividerColor="#115DA9" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_error_pw"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputPassword">

            <TextView
                android:id="@+id/errorPwInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/error_password"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone"
                android:paddingTop="6dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/textForget"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/textForget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/nunitoregular"
                android:text="@string/reset_password"
                android:textColor="@color/Primary100"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textAllCaps="false"
            android:text="@string/login"
            app:cornerRadius="12dp"
            android:textColor="@color/white"
            android:textColorLink="#115DA9"
            android:textSize="16sp"
            app:backgroundTint="#115DA9"
            android:contentDescription="tombol untuk login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_error_pw" />

        <TextView
            android:id="@+id/textGanti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/nunitoregular"
            android:text="@string/change_account"
            android:textColor="#115DA9"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonLogin" />

        <Button
            android:id="@+id/buttonTentangBca"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="52dp"
            android:text="@string/about_bca"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:backgroundTint="#FF657F9A"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="tombol tentang BCA"
            app:layout_constraintTop_toBottomOf="@id/textGanti" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/menuLain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/main2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/menu_pengajuan"
            android:layout_width="98dp"
            android:layout_height="45dp"
            android:background="@color/white">

            <ImageView
                android:contentDescription="@string/des_btn_pengajuan"
                android:layout_width="28dp"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/icon_atm"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="55dp"
                android:layout_height="30dp"
                android:layout_marginEnd="5dp"
                android:text="@string/credit_card_application"
                android:textSize="10sp"
                android:textColor="@color/Primary100"
                android:fontFamily="@font/nunitoregular"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/menu_pengajuan2"
            android:layout_width="98dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:background="@color/white">

            <ImageView
                android:contentDescription="@string/des_btn_halobca"
                android:layout_width="28dp"
                android:layout_height="25dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/icon_call"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="55dp"
                android:layout_height="30dp"
                android:layout_marginEnd="5dp"
                android:text="@string/call_bca"
                android:textSize="10sp"
                android:fontFamily="@font/nunitoregular"
                android:textColor="@color/Primary100"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/menu_pengajuan3"
            android:layout_width="98dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:background="@color/white">

            <ImageView
                android:contentDescription="@string/des_btn_wabca"
                android:layout_width="28dp"
                android:layout_height="25dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/icon_wa"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="55dp"
                android:layout_height="30dp"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/nunitoregular"
                android:text="@string/whatsapp_bca"
                android:textColor="@color/Primary100"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>
